--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ chardet==4.0.0
 idna==3.3
 multidict==5.2.0
 orjson==3.6.5
-py-cord @ git+https://github.com/pycord-development/pycord.git@f5c3e600158d804f9786d480182e495b4d53c8e7
+py-cord==1.7.3
 pycares==4.1.2
 pycparser==2.21
 python-dateutil==2.8.2
