--- a/config.yml
+++ b/config.yml
@@ -10,10 +10,10 @@ command_prefix: "!"
 pug_channel_name: "pug-queue"
 
 # Number of players, total, that are required for a PUG match.
-num_players_required_total: 2
+num_players_required_total: 10
 
 # Debug command. Allows the same player to repeatedly queue to fill up >1 slots.
-debug_allow_requeue: True
+debug_allow_requeue: False
 
 # How often (in seconds) to check if there's enough players pugged up to start
 # playing.
