--- a/config.yml
+++ b/config.yml
@@ -33,7 +33,7 @@ pugger_role_ping_threshold: 0.5
 # How long to wait, in hours, between role pings at a minimum.
 pugger_role_min_ping_interval_hours: 4.0
 
-# Name of the pug maintainer role.
+# List of 0 or more names of the pug maintainer roles.
 # If any user should be able to do pug queue admin tasks, use an empty value.
 pug_admin_role_name:
     - Admins
