--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pylint
         pip install pycodestyle
     - name: Analysing the code with pylint
