--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ orjson>=3.6.5
 packaging>=21.3
 pendulum==2.1.2
 Pillow>=8.4.0
-py-cord>=1.7.3
+py-cord==1.7.3
 pycares>=4.1.2
 pycparser>=2.21
 pyparsing>=3.0.6
