Add command "ping_puggers"
close #47

--- a/config.yml
+++ b/config.yml
@@ -45,3 +45,7 @@ pug_admin_role_name:
 
 # How long to keep idle puggers in the queue before automatically un-queueing them.
 restore_puggers_limit_hours: 16
+
+# How often can PUG queuers bulk-ping all the other players currently in the queue, in seconds.
+# Admin roles defined by "pug_admin_role_name" are not affected by this limit.
+ping_puggers_cooldown_secs: 600.0
