--- a/app.json
+++ b/app.json
@@ -1,16 +1,62 @@
 {
-  "name": "Discord NT PUG Bot",
-  "description": "Discord PUG bot for Neotokyo!",
+  "name": "Discord PUG Bot",
+  "description": "Discord bot for organizing PUGs (pick-up games). Built for Neotokyo, but should work for any two-team game with even number of players total.",
   "keywords": [
-    "Discord bot",
-    "Neotokyo",
-    "PUG"
+    "chat bot",
+    "Discord",
+    "pick-up game",
+    "PUG",
+    "Python"
   ],
   "website": "https://github.com/Rainyan/discord-bot-ntpug",
   "repository": "https://github.com/Rainyan/discord-bot-ntpug",
   "env": {
-    "DISCORD_BOT_TOKEN": {
+    "NTBOT_SECRET_TOKEN": {
       "description": "Discord bot API secret token. For info on how to generate this, please see: https://discord.com/developers/docs"
+    },
+    "NTBOT_PUG_CHANNEL": {
+      "description": "Name of the Discord server channel that the bot listens to. This value has to be an exact match of the channel name.",
+      "value": "pug-queue"
+    },
+    "NTBOT_PLAYERS_REQUIRED_TOTAL": {
+      "description": "Number of players, total, that are required for a PUG match. For example, 10 for a 5v5. Needs to be an even number.",
+      "value": "10"
+    },
+    "NTBOT_POLLING_INTERVAL_SECS": {
+      "description": "How often (in seconds) to check if there's enough players pugged up to start playing.",
+      "value": "5"
+    },
+    "NTBOT_PRESENCE_INTERVAL_SECS": {
+      "description": "How often (in seconds) to update the bot's Discord \"presence\" status message, displaying current amount of queued players next to the bot's nickname.",
+      "value": "30"
+    },
+    "NTBOT_PUGGER_ROLE": {
+      "description": "Name of the puggers role. Used for pinging.",
+      "value": "Puggers"
+    },
+    "NTBOT_PUGGER_ROLE_PING_THRESHOLD": {
+      "description": "Threshold, in range of 0.0-1.0, of how many queued players are required for the bot to auto-ping the pugger role.",
+      "value": "0.5"
+    },
+    "NTBOT_PUGGER_ROLE_PING_MIN_INTERVAL_HOURS": {
+      "description": "How long to wait, in hours, between role pings at a minimum.",
+      "value": "4.0"
+    },
+    "NTBOT_PUGGER_ROLE_PING_MAX_HISTORY": {
+      "description": "How many previous PUG channel messages to check, at most, for a previous pugger role ping.",
+      "value": "120"
+    },
+    "NTBOT_PUG_ADMIN_ROLES": {
+      "description": "List of 0 or more names of the pug maintainer roles. If any user should be able to do pug queue admin tasks, use an empty value.",
+      "value": "['Admins', 'Moderators']"
+    },
+    "NTBOT_IDLE_THRESHOLD_HOURS": {
+      "description": "How long to keep idle puggers in the queue before automatically un-queueing them, in full hours. Has to be a positive integer.",
+      "value": "16"
+    },
+    "NTBOT_PING_PUGGERS_COOLDOWN_SECS": {
+      "description": "How often can PUG queuers bulk-ping all the other players currently in the queue, in seconds. Admins with roles defined by \"pug_admin_role_name\" are not affected by this time limit.",
+      "value": "600.0"
     }
   },
   "formation": {
