--- a/.github/workflows/validate_configs.yml
+++ b/.github/workflows/validate_configs.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Validate JSON
-        uses: OrRosenblatt/validate-json-action@0.1.0
+        uses: docker://orrosenblatt/validate-json-action:latest
         env:
           INPUT_SCHEMA: schemata/json.json
           INPUT_JSONS: app.json
