--- a/.github/workflows/validate_configs.yml
+++ b/.github/workflows/validate_configs.yml
@@ -2,7 +2,7 @@ name: Validate configs
 
 on:
   push:
-    branches: [ main, validate_json ]
+    branches: [ main ]
     paths:
       - '**.json'
       - '.github/workflows/validate_configs.yml'
