--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 aiodns~=3.0.0
-aiohttp~=3.7.4.post0
-async-timeout~=3.0.1
+aiohttp~=3.8.1
+aiosignal~=1.2.0
+async-timeout~=4.0.2
 attrs~=21.4.0
 brotlipy~=0.7.0
 cchardet~=2.1.7
 cffi~=1.15.0
 chardet~=4.0.0
+charset-normalizer~=2.0.12
+frozenlist~=1.3.0
 idna~=3.3
-multidict~=6.0.1
+multidict~=6.0.2
 pendulum~=2.1.2
 py-cord~=1.7.3
 pycares~=4.1.2
