--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,17 @@
-# Bot secret token goes here. Don't share this value with others.
-# Alternatively, you can set the OS environment variable DISCORD_BOT_TOKEN,
-# which will take precedence over this config value.
+# All of the values defined in this config file can be overridden with environment variables of the same name,
+# and as such will take precedence over the values defined in this file. This can be especially useful for cloud
+# deployments, but you can freely choose to define the values in whichever location.
+#
+# Note that the type of all of the variables is enforced, so for example the string value "NTBOT_SECRET_TOKEN"
+# will have to include the double quotations ("token") as part of its value. Likewise, integer values cannot be
+# represented as floating point numbers, etc. Any mismatching config types will throw an error upon launching of
+# the bot, so this kind of misconfiguration should hopefully be easy enough to spot.
+
+# The Discord bot secret token goes here. Don't share this value with others.
 # For info on how to generate this token, please see: https://discord.com/developers/docs
 NTBOT_SECRET_TOKEN: ""
 
-# The first character of commands, for example "!" for "!pug"
+# The first character of bot commands, for example "!" for "!pug".
 NTBOT_CMD_PREFIX: "!"
 
 # Name of the Discord server channel that the bot listens to.
@@ -16,7 +23,7 @@ NTBOT_PUG_CHANNEL: pug-queue
 NTBOT_PLAYERS_REQUIRED_TOTAL: 10
 
 # Debug command. Whether to allow the same player to repeatedly queue to fill up >1 slots,
-# for bot testing purposes.
+# for bot testing purposes. This should not be normally enabled.
 NTBOT_DEBUG_ALLOW_REQUEUE: False
 
 # How often (in seconds) to check if there's enough players pugged up to start
@@ -34,11 +41,12 @@ NTBOT_PUGGER_ROLE: Puggers
 # for the bot to auto-ping the pugger role.
 NTBOT_PUGGER_ROLE_PING_THRESHOLD: 0.5
 
-# How long to wait, in hours, between role pings at a minimum.
+# How long to wait, in hours, between automated "NTBOT_PUGGER_ROLE_PING_THRESHOLD"
+# role pings, at a minimum. Has to be a floating point value.
 NTBOT_PUGGER_ROLE_PING_MIN_INTERVAL_HOURS: 4.0
 
-# List of 0 or more names of the pug maintainer roles.
-# If any user should be able to do pug queue admin tasks, use an empty value.
+# List of 0 or more PUG queue moderator/admin roles.
+# If any user should be able to do PUG queue admin tasks, use an empty value.
 NTBOT_PUG_ADMIN_ROLES:
     - Admins
     - Moderators
@@ -48,5 +56,5 @@ NTBOT_PUG_ADMIN_ROLES:
 NTBOT_IDLE_THRESHOLD_HOURS: 16
 
 # How often can PUG queuers bulk-ping all the other players currently in the queue, in seconds.
-# Admins with roles defined by "pug_admin_role_name" are not affected by this time limit.
+# Admins with role(s) defined by "NTBOT_PUG_ADMIN_ROLES" are not affected by this time limit.
 NTBOT_PING_PUGGERS_COOLDOWN_SECS: 600.0
