--- a/config.yml
+++ b/config.yml
@@ -4,9 +4,9 @@
 #
 # Note that the type of all of the variables is enforced as it would when evaluated against the expected type
 # by Python's literal_eval(...), so for example the string value of "NTBOT_SECRET_TOKEN" will have to include
-# the double quotations ("token") as part of its value. Likewise, integer values cannot be represented as
-# floating point numbers, etc. Any mismatching config types will throw an error upon launching of the bot,
-# so this kind of misconfiguration should hopefully be easy enough to spot.
+# the double quotations ("token") as part of its value. Due to strict type checking, things like casting integer
+# values into floats, etc, is also disallowed in the config. Any mismatching config types will throw an error
+# upon launching of the bot, so this kind of misconfiguration should hopefully be easy enough to spot.
 
 # The Discord bot secret token goes here. Don't share this value with others.
 # For info on how to generate this token, please see: https://discord.com/developers/docs
