--- a/config.yml
+++ b/config.yml
@@ -64,5 +64,5 @@ NTBOT_IDLE_THRESHOLD_HOURS: 16
 NTBOT_PING_PUGGERS_COOLDOWN_SECS: 600.0
 
 # Names of each team
-FIRST_TEAM_NAME: Jinrai
-SECOND_TEAM_NAME: NSF
+NTBOT_FIRST_TEAM_NAME: Jinrai
+NTBOT_SECOND_TEAM_NAME: NSF
