--- a/.github/workflows/validate_toml.yml
+++ b/.github/workflows/validate_toml.yml
@@ -5,10 +5,8 @@ on:
     branches: [ main ]
     # Ignore changes to the readme, and to other actions.
     paths:
-      - "**"
+      - '**.toml'
       - '.github/workflows/validate_toml.yml'
-      - "!**.md"
-      - "!**.yml"
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
