--- a/.github/workflows/validate_toml.yml
+++ b/.github/workflows/validate_toml.yml
@@ -26,7 +26,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install --upgrade toml-validator
     - name: Validate TOML data
-      run: toml-validator `ls -R|grep .py$|xargs`
+      run: toml-validator `ls -R|grep .toml$|xargs`
