--- a/.github/workflows/validate_toml.yml
+++ b/.github/workflows/validate_toml.yml
@@ -28,4 +28,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade toml-validator
     - name: Validate TOML data
-      run: toml-validator `ls -R|grep .toml$|xargs`
+      run: toml-validator|find -iname "*.toml"|xargs
