--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ frozenlist==1.3.1
 idna==3.3
 multidict==6.0.2
 orjson==3.8.0
+pendulum==2.1.2
 py-cord==2.1.3
 pycares==4.2.2
 pycparser==2.21
 python-dateutil==2.8.2
+pytzdata==2020.1
 six==1.16.0
 strictyaml==1.6.1
 yarl==1.8.1
