Change NTBOT_IDLE_THRESHOLD_HOURS type to float
Change type from int to float, so that values <1 hour can be used.

--- a/config.yml
+++ b/config.yml
@@ -53,8 +53,8 @@ NTBOT_PUG_ADMIN_ROLES:
     - Moderators
 
 # How long to keep idle puggers in the queue before automatically un-queueing them,
-# in full hours. Has to be a positive integer.
-NTBOT_IDLE_THRESHOLD_HOURS: 16
+# in full hours. Has to be a positive floating point value.
+NTBOT_IDLE_THRESHOLD_HOURS: 16.0
 
 # How often can PUG queuers bulk-ping all the other players currently in the queue, in seconds.
 # Admins with role(s) defined by "NTBOT_PUG_ADMIN_ROLES" are not affected by this time limit.
