--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -34,5 +34,6 @@ jobs:
         pip install pycodestyle
     - name: Analysing the code with pylint
       run: |
+        cd ./src
         pylint `ls -R|grep .py$|xargs`
         pycodestyle `ls -R|grep .py$|xargs`
