Ignore psycopg2 from pylint
Ignore the psycopg2 module, because we can't properly lint the C extension stuff in it

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -36,4 +36,4 @@ jobs:
       working-directory: ./src
       run: |
         pycodestyle `ls -R|grep .py$|xargs`
-        pylint `ls -R|grep .py$|xargs`
+        pylint --ignored-modules=psycopg2 `ls -R|grep .py$|xargs`
