--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ black = "^22.10.0"
 
 [tool.black]
 line-length = 79
+target-version = ['py38', 'py39', 'py310']
 
 [build-system]
 requires = ["poetry-core"]
