--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "discord-bot-ntpug"
+name = "pug"
 version = "1.0.0"
 description = "PUG (pick-up game) bot for Discord."
 authors = ["Rain <Rainyan@users.noreply.github.com>"]
