--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,12 @@
 [tool.poetry]
 name = "pug"
 version = "1.0.0"
-description = "PUG (pick-up game) bot for Discord."
+description = ""
 authors = ["Rain <Rainyan@users.noreply.github.com>"]
-license = "MIT License"
 readme = "README.md"
-packages = [{include = "discord_bot_ntpug"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.10"
 aiodns = "3.0.0"
 aiohttp = "3.8.1"
 aiosignal = "1.2.0"
@@ -38,12 +36,8 @@ pylint = "^2.15.3"
 pycodestyle = "^2.9.1"
 black = "^22.10.0"
 
-[tool.black]
-line-length = 79
-target-version = ['py38', 'py39', 'py310']
-
 [tool.poetry.scripts]
-pugbot = "pug.bot:main"
+pugbot = "pug:main"
 
 [build-system]
 requires = ["poetry-core"]
