--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,13 @@ version = "1.0.0"
 description = ""
 authors = ["Rain <Rainyan@users.noreply.github.com>"]
 readme = "README.md"
+include = [
+    "cfg",
+    "LICENSE",
+    "README.md",
+    "runtime.txt",
+    "static",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
