--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ black = "^22.10.0"
 [tool.poetry.scripts]
 pugbot = "pug.bot:main"
 
+[tool.black]
+line-length = 79
+target-version = ['py38', 'py39', 'py310']
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
